@@ -6,7 +6,7 @@
  local LSM = LibStub("LibSharedMedia-3.0")
  local self, GSA, PlaySoundFile = GladiatorlosSA, GladiatorlosSA, PlaySoundFile
  local GSA_TEXT = "|cff69CCF0GladiatorlosSA2|r (|cffFFF569/gsa|r)"
- local GSA_VERSION = "|cffFF7D0A TBC-B1 |r(|cff4DFF4D2.5.1 Burning Crusade (Classic)|r)"
+ local GSA_VERSION = "|cffFF7D0A TBC-B2 |r(|cff4DFF4D2.5.1 Burning Crusade (Classic)|r)"
  local GSA_TEST_BRANCH = ""
  local GSA_AUTHOR = " "
  local gsadb
