@@ -4,7 +4,7 @@
 ## Notes-zhTW: PVP技能語音提示
 ## Author: Abatorlos(of Spinebreaker), DuskAshes, superk521, zuhligan, Grit (Legion Update), Mini_Dragon, LordKuper
 ## SavedVariables: GladiatorlosSADB
-## Version: TBC-B1
+## Version: TBC-B2
 
 embeds.xml
 Locales\locales.xml
