@@ -518,21 +518,21 @@ function GSA:OnOptionCreate()
 								inline = true,
 								name = L["|cff0070daShaman|r"],
 								order = 140,
-								args = listOption({},"auraApplied"),
+								args = listOption({16166,30823,16188},"auraApplied"),
 							},
 							warlock	= { -- AuraApplied
 								type = 'group',
 								inline = true,
 								name = L["|cff9482C9Warlock|r"],
 								order = 150,
-								args = listOption({},"auraApplied"),
+								args = listOption({132,28610,18288},"auraApplied"),
 							},
 							warrior	= { -- AuraApplied
 								type = 'group',
 								inline = true,
 								name = L["|cffC79C6EWarrior|r"],
 								order = 160,
-								args = listOption({},"auraApplied"),
+								args = listOption({2457,71,2458,2687,871,18499,1719,23920,12292,12975},"auraApplied"),
 							},
 						},
 					},
@@ -603,21 +603,21 @@ function GSA:OnOptionCreate()
 								inline = true,
 								name = L["|cff0070daShaman|r"],
 								order = 130,
-								args = listOption({},"auraRemoved"),
+								args = listOption({30823},"auraRemoved"),
 							},
-							warlock = { -- AuraRemoved
+--[[							warlock = { -- AuraRemoved
 								type = 'group',
 								inline = true,
 								name = L["|cff9482C9Warlock|r"],
 								order = 140,
 								args = listOption({},"auraRemoved"),
-							},
+							},]]
 							warrior	= { -- AuraRemoved
 								type = 'group',
 								inline = true,
 								name = L["|cffC79C6EWarrior|r"],
 								order = 150,
-								args = listOption({},"auraRemoved"),
+								args = listOption({871,1719,23920,12292,12975},"auraRemoved"),
 							},
 						},
 					},
@@ -700,15 +700,15 @@ function GSA:OnOptionCreate()
 								inline = true,
 								name = L["|cff9482C9Warlock|r"],
 								order = 140,
-								args = listOption({},"castStart"),
+								args = listOption({30146,1122,6215,17928,30405,18647,30414,29893,27220,30908,30545},"castStart"),
 							},
-							warrior = { -- CastStart
+--[[							warrior = { -- CastStart
 								type = 'group',
 								inline = true,
 								name = L["|cffC79C6EWarrior|r"],
 								order = 150,
 								args = listOption({},"castStart"),
-							},
+							},]]
 						},
 					},
 					spellCastSuccess = {
@@ -838,14 +838,14 @@ function GSA:OnOptionCreate()
 								inline = true,
 								name = L["|cff9482C9Warlock|r"],
 								order = 150,
-								args = listOption({},"castSuccess"),
+								args = listOption({27223},"castSuccess"),
 							},
 							warrior	= { -- CastSuccess
 								type = 'group',
 								inline = true,
 								name = L["|cffC79C6EWarrior|r"],
 								order = 160,
-								args = listOption({},"castSuccess"),
+								args = listOption({676,5246,6554,29704,11578,25275,3411,12328,12809},"castSuccess"),
 							},
 						},
 					},
